# pocket-server

./: .gitignore  Cargo.toml  Dockerfile  compose.yml
migrations/: 001_file_hash_table.sql
src/: main.rs
